--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
     </properties>
 
     <repositories>
+    
+        <repository>
+            <id>blade</id>
+            <name>blade</name>
+            <url>https://liferay-test-01.ci.cloudbees.com/job/liferay-blade-cli/lastSuccessfulBuild/artifact/mavenRepo</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>OSGi</id>
             <name>OSGi public binaries</name>
